--- a/SpriteWalkthough/Base.lproj/Main.storyboard
+++ b/SpriteWalkthough/Base.lproj/Main.storyboard
@@ -142,7 +142,7 @@
                                 <fontDescription key="fontDescription" name="Moon-Bold" family="Moon" pointSize="30"/>
                                 <inset key="contentEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="5"/>
                                 <state key="normal" title="ZIN">
-                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="0.69528479609929084" colorSpace="calibratedRGB"/>
                                 </state>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -309,7 +309,7 @@ ATTACK</string>
                                 <fontDescription key="fontDescription" name="Moon-Bold" family="Moon" pointSize="18"/>
                                 <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="10"/>
                                 <state key="normal" title="Help">
-                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="0.69528479610000005" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="helpAction:" destination="8hq-Uf-RA3" eventType="touchUpInside" id="T3L-7j-Sux"/>
