--- a/SpriteWalkthough/Base.lproj/Main.storyboard
+++ b/SpriteWalkthough/Base.lproj/Main.storyboard
@@ -39,10 +39,13 @@
                         <viewControllerLayoutGuide type="top" id="dEf-1W-Pt8"/>
                         <viewControllerLayoutGuide type="bottom" id="IRr-lm-nGg"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="0PD-dm-pXb" customClass="SKView">
+                    <view key="view" contentMode="scaleToFill" id="0PD-dm-pXb">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuBackground.png" translatesAutoresizingMaskIntoConstraints="NO" id="juz-iM-qIp">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuPlanet.png" translatesAutoresizingMaskIntoConstraints="NO" id="vJW-K4-8rP" userLabel="menuPlanet.png - 1">
                                 <rect key="frame" x="115" y="28" width="50" height="50"/>
                                 <constraints>
@@ -181,8 +184,10 @@ ATTACK</string>
                             <constraint firstItem="dEh-7H-kc8" firstAttribute="leading" secondItem="0PD-dm-pXb" secondAttribute="leading" constant="42" id="66t-yQ-Pyp"/>
                             <constraint firstAttribute="trailing" secondItem="2E9-FI-wPc" secondAttribute="trailing" constant="41" id="7Cy-MG-gW2"/>
                             <constraint firstItem="xDl-wK-OZv" firstAttribute="leading" secondItem="0PD-dm-pXb" secondAttribute="leading" constant="221" id="8cs-GL-Kw8"/>
+                            <constraint firstItem="juz-iM-qIp" firstAttribute="top" secondItem="0PD-dm-pXb" secondAttribute="top" id="8ct-UV-EHk"/>
                             <constraint firstItem="1d1-lJ-Rw0" firstAttribute="leading" secondItem="0PD-dm-pXb" secondAttribute="leading" constant="42" id="AdH-nC-mOB"/>
                             <constraint firstItem="vJW-K4-8rP" firstAttribute="leading" secondItem="0PD-dm-pXb" secondAttribute="leading" constant="115" id="C14-8b-V2C"/>
+                            <constraint firstItem="IRr-lm-nGg" firstAttribute="top" secondItem="juz-iM-qIp" secondAttribute="bottom" id="D0d-QK-6n1"/>
                             <constraint firstItem="vJW-K4-8rP" firstAttribute="top" secondItem="dEf-1W-Pt8" secondAttribute="bottom" constant="8" id="Des-YO-Ox6"/>
                             <constraint firstAttribute="trailing" secondItem="Kl6-OU-nGG" secondAttribute="trailing" constant="20" id="E3m-1Q-HoA"/>
                             <constraint firstItem="r4V-wO-nK5" firstAttribute="top" secondItem="0PD-dm-pXb" secondAttribute="top" constant="146" id="EXY-Zn-CLL"/>
@@ -202,9 +207,11 @@ ATTACK</string>
                             <constraint firstAttribute="trailing" secondItem="HGt-bC-Frb" secondAttribute="trailing" constant="41" id="f5T-ed-bO8"/>
                             <constraint firstItem="1d1-lJ-Rw0" firstAttribute="top" secondItem="HGt-bC-Frb" secondAttribute="bottom" constant="22" id="fE7-Wk-NS9"/>
                             <constraint firstAttribute="trailing" secondItem="1d1-lJ-Rw0" secondAttribute="trailing" constant="41" id="jhN-in-RIm"/>
+                            <constraint firstAttribute="trailing" secondItem="juz-iM-qIp" secondAttribute="trailing" id="khw-qe-X8P"/>
                             <constraint firstItem="2E9-FI-wPc" firstAttribute="top" secondItem="0PD-dm-pXb" secondAttribute="top" constant="65" id="ljx-Hc-cTb"/>
                             <constraint firstItem="Kl6-OU-nGG" firstAttribute="leading" secondItem="0PD-dm-pXb" secondAttribute="leading" constant="200" id="uDi-qz-mGS"/>
                             <constraint firstAttribute="trailing" secondItem="r4V-wO-nK5" secondAttribute="trailing" constant="91" id="vz6-y5-1hH"/>
+                            <constraint firstItem="juz-iM-qIp" firstAttribute="leading" secondItem="0PD-dm-pXb" secondAttribute="leading" id="ybp-c2-lcX"/>
                             <constraint firstItem="dEh-7H-kc8" firstAttribute="top" secondItem="1d1-lJ-Rw0" secondAttribute="bottom" constant="16" id="yuW-cl-8Aq"/>
                         </constraints>
                     </view>
@@ -245,11 +252,14 @@ ATTACK</string>
                         <viewControllerLayoutGuide type="top" id="JKX-sg-N5q"/>
                         <viewControllerLayoutGuide type="bottom" id="rhu-az-gGa"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="iKH-gh-k8M" customClass="SKView">
+                    <view key="view" contentMode="scaleToFill" id="iKH-gh-k8M">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="cEP-Ay-vO5">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuBackground.png" translatesAutoresizingMaskIntoConstraints="NO" id="f8E-wy-e1C">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="cEP-Ay-vO5" customClass="SASlider">
                                 <rect key="frame" x="141" y="215" width="143" height="31"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -261,13 +271,12 @@ ATTACK</string>
                                     <action selector="musicTouchDown:" destination="8hq-Uf-RA3" eventType="touchDown" id="UAL-Cr-d5v"/>
                                 </connections>
                             </slider>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="7me-Bu-jXn">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="7me-Bu-jXn" customClass="SASlider">
                                 <rect key="frame" x="141" y="140" width="143" height="31"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="7me-Bu-jXn" secondAttribute="height" multiplier="139:30" id="iRk-8G-ueU"/>
                                 </constraints>
-                                <color key="thumbTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <action selector="soundEffectsSliderUpInside:" destination="8hq-Uf-RA3" eventType="touchUpInside" id="tAz-mc-yUa"/>
                                     <action selector="soundEffectsSliderUpOutside:" destination="8hq-Uf-RA3" eventType="touchUpOutside" id="eXF-OE-H8q"/>
@@ -357,6 +366,9 @@ ATTACK</string>
                             <constraint firstItem="yfZ-e7-vgQ" firstAttribute="leading" secondItem="G9W-eZ-eNc" secondAttribute="leading" id="9cJ-Jq-zOc"/>
                             <constraint firstItem="6K5-5I-WsQ" firstAttribute="leading" secondItem="iKH-gh-k8M" secondAttribute="leading" id="AsL-QO-LwS"/>
                             <constraint firstAttribute="trailing" secondItem="6K5-5I-WsQ" secondAttribute="trailing" constant="214" id="Chi-yS-EWA"/>
+                            <constraint firstItem="rhu-az-gGa" firstAttribute="top" secondItem="f8E-wy-e1C" secondAttribute="bottom" id="E2q-nF-mNz"/>
+                            <constraint firstAttribute="trailing" secondItem="f8E-wy-e1C" secondAttribute="trailing" id="MlQ-qa-t3z"/>
+                            <constraint firstItem="f8E-wy-e1C" firstAttribute="top" secondItem="iKH-gh-k8M" secondAttribute="top" id="N8v-tq-PMa"/>
                             <constraint firstItem="rWG-hw-Xm7" firstAttribute="leading" secondItem="iKH-gh-k8M" secondAttribute="leading" constant="37" id="OGu-k0-pQo"/>
                             <constraint firstAttribute="trailing" secondItem="tnT-uA-cOo" secondAttribute="trailing" constant="20" id="VPJ-Di-LiS"/>
                             <constraint firstItem="wMI-5d-o5G" firstAttribute="leading" secondItem="iKH-gh-k8M" secondAttribute="leading" id="W8c-Tp-tiG"/>
@@ -365,6 +377,7 @@ ATTACK</string>
                             <constraint firstAttribute="trailing" secondItem="rWG-hw-Xm7" secondAttribute="trailing" constant="202" id="bTU-en-W84"/>
                             <constraint firstItem="G9W-eZ-eNc" firstAttribute="trailing" secondItem="rWG-hw-Xm7" secondAttribute="trailing" id="cF0-p8-ZuY"/>
                             <constraint firstItem="qeo-UB-jdO" firstAttribute="top" secondItem="yfZ-e7-vgQ" secondAttribute="top" constant="-5" id="dim-N0-mMG"/>
+                            <constraint firstItem="f8E-wy-e1C" firstAttribute="leading" secondItem="iKH-gh-k8M" secondAttribute="leading" id="eUF-SP-4SB"/>
                             <constraint firstItem="7me-Bu-jXn" firstAttribute="top" secondItem="rWG-hw-Xm7" secondAttribute="top" constant="-4" id="gGj-tF-5zy"/>
                             <constraint firstItem="qeo-UB-jdO" firstAttribute="centerX" secondItem="cEP-Ay-vO5" secondAttribute="centerX" id="jXN-Bb-mry"/>
                             <constraint firstItem="yfZ-e7-vgQ" firstAttribute="top" secondItem="G9W-eZ-eNc" secondAttribute="bottom" constant="57" id="lMb-QI-ZOH"/>
@@ -416,10 +429,13 @@ ATTACK</string>
                         <viewControllerLayoutGuide type="top" id="XdJ-34-JY9"/>
                         <viewControllerLayoutGuide type="bottom" id="Igg-Ca-K4A"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="zTa-Qa-66T" customClass="SKView">
+                    <view key="view" contentMode="scaleToFill" id="zTa-Qa-66T">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuBackground.png" translatesAutoresizingMaskIntoConstraints="NO" id="2Rc-7L-DYY">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UPL-Q2-qAb" customClass="ShipSelectionButton">
                                 <rect key="frame" x="12" y="77" width="296" height="55"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -509,6 +525,7 @@ ATTACK</string>
                             <constraint firstAttribute="trailing" secondItem="jde-it-Eg5" secondAttribute="trailing" constant="12" id="7hm-2F-PD9"/>
                             <constraint firstAttribute="trailing" secondItem="Xp0-Du-0ZA" secondAttribute="trailing" constant="12" id="7lK-11-9tk"/>
                             <constraint firstItem="9zV-tj-wzf" firstAttribute="height" secondItem="UPL-Q2-qAb" secondAttribute="height" id="BLf-1x-Ojx"/>
+                            <constraint firstItem="2Rc-7L-DYY" firstAttribute="top" secondItem="zTa-Qa-66T" secondAttribute="top" id="FcV-ve-XAu"/>
                             <constraint firstAttribute="trailing" secondItem="UPL-Q2-qAb" secondAttribute="trailing" constant="12" id="HtS-pe-T2Z"/>
                             <constraint firstItem="XJj-Ia-uMY" firstAttribute="leading" secondItem="zTa-Qa-66T" secondAttribute="leading" constant="12" id="JW5-5V-RLy"/>
                             <constraint firstAttribute="trailing" secondItem="XJj-Ia-uMY" secondAttribute="trailing" constant="12" id="JzT-5x-Qnd"/>
@@ -533,10 +550,13 @@ ATTACK</string>
                             <constraint firstAttribute="trailing" secondItem="vTv-73-QrP" secondAttribute="trailing" constant="214" id="iUA-o4-hO9"/>
                             <constraint firstAttribute="trailing" secondItem="tZl-oU-YQB" secondAttribute="trailing" constant="12" id="lP9-Mi-CEw"/>
                             <constraint firstItem="IFV-BB-Axd" firstAttribute="top" secondItem="jde-it-Eg5" secondAttribute="bottom" constant="5" id="qHT-o5-5dh"/>
+                            <constraint firstAttribute="trailing" secondItem="2Rc-7L-DYY" secondAttribute="trailing" id="r3a-Qj-fUr"/>
                             <constraint firstItem="Xp0-Du-0ZA" firstAttribute="top" secondItem="tZl-oU-YQB" secondAttribute="bottom" constant="5" id="roq-Cg-R7R"/>
                             <constraint firstItem="EEc-4m-Og2" firstAttribute="top" secondItem="Xp0-Du-0ZA" secondAttribute="bottom" constant="5" id="s10-iY-wqr"/>
                             <constraint firstItem="jde-it-Eg5" firstAttribute="top" secondItem="EEc-4m-Og2" secondAttribute="bottom" constant="5" id="sri-mI-Gag"/>
                             <constraint firstItem="tZl-oU-YQB" firstAttribute="leading" secondItem="zTa-Qa-66T" secondAttribute="leading" constant="12" id="tE7-Bp-RRI"/>
+                            <constraint firstItem="Igg-Ca-K4A" firstAttribute="top" secondItem="2Rc-7L-DYY" secondAttribute="bottom" id="vNm-1M-2BK"/>
+                            <constraint firstItem="2Rc-7L-DYY" firstAttribute="leading" secondItem="zTa-Qa-66T" secondAttribute="leading" id="vPO-k6-lEe"/>
                             <constraint firstItem="vTv-73-QrP" firstAttribute="top" secondItem="zTa-Qa-66T" secondAttribute="top" id="waB-2n-v5i"/>
                             <constraint firstItem="9zV-tj-wzf" firstAttribute="top" secondItem="XJj-Ia-uMY" secondAttribute="bottom" constant="5" id="x3P-yc-z6z"/>
                             <constraint firstItem="IFV-BB-Axd" firstAttribute="height" secondItem="UPL-Q2-qAb" secondAttribute="height" id="zR0-KC-xtS"/>
